--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>eLearning Platform</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
+    <header>
+        <div class="logo">
+            <h1>eLearning Platform</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Promotions</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section class="intro">
+        <h2>Welcome to Our eLearning Platform</h2>
+        <p>Explore a variety of online courses designed to help you succeed in your career. Join now and start learning today!</p>
+    </section>
+
+    <section class="course-offerings">
+        <h2>Our Courses</h2>
+        <div class="course">
+            <h3>Web Development</h3>
+            <p>Learn the fundamentals of building websites and web applications with HTML, CSS, and JavaScript.</p>
+        </div>
+        <div class="course">
+            <h3>Data Science</h3>
+            <p>Master data analysis, machine learning, and Python programming to become a data science expert.</p>
+        </div>
+        <div class="course">
+            <h3>Graphic Design</h3>
+            <p>Learn design principles, software like Adobe Photoshop, and how to create stunning graphics.</p>
+        </div>
+    </section>
+
+    <section class="promotions">
+        <h2>Current Promotions</h2>
+        <div class="promo">
+            <h3>25% Off for New Students</h3>
+            <p>Sign up today and receive a 25% discount on your first course!</p>
+        </div>
+        <div class="promo">
+            <h3>Free Trial for Premium Courses</h3>
+            <p>Get a 7-day free trial for our premium courses and start your learning journey!</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 eLearning Platform. All rights reserved.</p>
+    </footer>
+</body>
 </html>
