--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
 
-    <section class="promotions">
+<!--     //<section class="promotions">
         <h2>Current Promotions</h2>
         <div class="promo">
             <h3>25% Off for New Students</h3>
@@ -52,7 +52,7 @@
             <h3>Free Trial for Premium Courses</h3>
             <p>Get a 7-day free trial for our premium courses and start your learning journey!</p>
         </div>
-    </section>
+    </section> -->
 
     <footer>
         <p>&copy; 2025 eLearning Platform. All rights reserved.</p>
